2025-11-18T00:43:48Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/19449762168 # 1312
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-18
* notice: last 14d: unq all: 11 29
* notice: prev accum: outdated-unq outdated-all / unq all: 1272 6052 / 1285 6083
* notice: next accum: outdated-unq outdated-all / unq all: 1273 6054 / 1285 6083
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-11-03] / []

2025-11-17T12:18:02Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/19429323314 # 1311
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-17
* notice: last 14d: unq all: 12 31
* notice: prev accum: outdated-unq outdated-all / unq all: 1272 6052 / 1284 6081
* notice: next accum: outdated-unq outdated-all / unq all: 1272 6052 / 1285 6083
* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2025-11-17]

2025-11-17T00:45:35Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/19414839925 # 1310
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-17
* notice: last 14d: unq all: 11 29
* notice: prev accum: outdated-unq outdated-all / unq all: 1271 6045 / 1283 6077
* notice: next accum: outdated-unq outdated-all / unq all: 1272 6052 / 1284 6081
* notice: prev exec diff / last date diff / accum: unq all: +1 +4 -0 -0 / +1 +4 -0 -0 / 1 4
* notice: removed / changed dates: [2025-11-02] / [2025-11-16]

2025-11-15T12:15:15Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/19389679496 # 1307