@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-11-18T00:43:48Z",
+  "timestamp" : "2025-11-19T00:44:02Z",
   "count_outdated" : 6054,
   "uniques_outdated" : 1273,
-  "count" : 6083,
-  "uniques" : 1285,
+  "count" : 6084,
+  "uniques" : 1286,
   "views" : [
     {
       "timestamp": "2025-11-05T00:00:00Z",
@@ -82,6 +82,15 @@
       "count": 2,
       "count_minmax": [ 2, 2 ],
       "count_decinc": [ 0, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-11-18T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
