@@ -1,6 +1,6 @@
 {
-  "count": 29,
-  "uniques": 11,
+  "count": 30,
+  "uniques": 12,
   "views": [
     {
       "timestamp": "2025-11-05T00:00:00Z",
@@ -45,6 +45,11 @@
     {
       "timestamp": "2025-11-17T00:00:00Z",
       "count": 2,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2025-11-18T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
